--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
-  text-align: center;
+.div--App {
+margin: 0;
+font-size: 20px;
+margin-left: 10px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.div--filter--Container{
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.div--filter{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 13px;
+}
+.member-div {
+  width: 1000px;
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #e0dfdf ;
+  border-radius: 7px;
+  padding: 10px;
+  margin: 5px;
+}
+.notMember-div {
+  color: #b2b2b2;
+}
+.user-div {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+.div--search {
+  width: 1000px;
+  height: 30%;
+  margin: 5px;
+  margin-bottom: 25px;
+  padding: 10px;
+  border-bottom: 1px solid #e0dfdf ;
+}
+.input--search {
+  border-style: none;
+  font-size: 18px;
+  color: #b2b2b2;
+}
+.search-icon {
+  color: #b2b2b2;
+}
+.user-icon,
+.search-icon {
+  font-size: 23px;
+  margin-right: 15px;
+}
+.image--checked {
+  width: 25px;
+  height: 25px;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.empty-circle {
+  width: 25px;
+  height: 25px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 2px solid #c6c5c5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button--submit{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.button--cancel{
+ width: 150px;
+ height: 45px;
+ color : #d3d0d0 ;
+ border: #d3d0d0 solid 1px;
+ border-radius: 6px;
+ background-color: white;
+ font-size: 19px;
+ margin-right : 300px;
+}
+.button--save{
+  width: 150px;
+  height: 45px;
+  color : white;
+  border-style: none;
+  border-radius: 6px;
+  -webkit-box-shadow: 0px 6px 6px rgba(30, 81, 223, 0.64);
+
+  background: linear-gradient(to right, #61adfe, #3654fd);
+  font-size: 19px;
 }
