--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,23 +1,23 @@
-.div--App {
+.appContainer {
 margin: 0;
 font-size: 20px;
 margin-left: 10px;
 }
-.div--filter--Container{
+.membersContainer{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-bottom: 15px;
 }
-.div--filter{
+.membersList{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-bottom: 13px;
 }
-.member-div {
+.member{
   width: 1000px;
   height: 40px;
   display: flex;
@@ -28,15 +28,15 @@ margin-left: 10px;
   padding: 10px;
   margin: 5px;
 }
-.notMember-div {
+.notMember {
   color: #b2b2b2;
 }
-.user-div {
+.personsInfo{
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
-.div--search {
+.searchBar{
   width: 1000px;
   height: 30%;
   margin: 5px;
@@ -44,20 +44,20 @@ margin-left: 10px;
   padding: 10px;
   border-bottom: 1px solid #e0dfdf ;
 }
-.input--search {
+.searchInput {
   border-style: none;
   font-size: 18px;
   color: #b2b2b2;
 }
-.search-icon {
+.searchIcon {
   color: #b2b2b2;
 }
-.user-icon,
-.search-icon {
+.userIcon,
+.searchIcon {
   font-size: 23px;
   margin-right: 15px;
 }
-.image--checked {
+.checkedImage {
   width: 25px;
   height: 25px;
   align-items: center;
@@ -65,7 +65,7 @@ margin-left: 10px;
   cursor: pointer;
 }
 
-.empty-circle {
+.emptyCircle {
   width: 25px;
   height: 25px;
   background-color: transparent;
@@ -73,13 +73,13 @@ margin-left: 10px;
   border: 2px solid #c6c5c5;
 }
 
-.button--submit{
+.buttons{
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
-.button--cancel{
+.cancelButton{
  width: 150px;
  height: 45px;
  color : #d3d0d0 ;
@@ -89,14 +89,13 @@ margin-left: 10px;
  font-size: 19px;
  margin-right : 300px;
 }
-.button--save{
+.saveButton{
   width: 150px;
   height: 45px;
   color : white;
   border-style: none;
   border-radius: 6px;
   -webkit-box-shadow: 0px 6px 6px rgba(30, 81, 223, 0.64);
-
   background: linear-gradient(to right, #61adfe, #3654fd);
   font-size: 19px;
 }
